<resources>
    <string name="app_name">Transire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Milas Baguio Transient House</string>
    <string name="nav_header_subtitle">Milas@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_room_details">Room Details</string>
    <string name="menu_location">Location</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_facilities">Facilities</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_booking">My Booking</string>
    <string name="menu_room_booking">Room Booking</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_slideshow">slideshow</string>


    <string name="home_card_palace_name">Milas Baguio Transient House</string>
    <string name="home_card_location">285 Suello Village, Marcos Highway</string>
    <string name="home_card_email">Milas@gmail.com</string>
    <string name="home_card_phone">+639515408978</string>


    <string name="facilities_introduction">Welcome to our transire app, where you can explore all the amenities and room facilities we offer to ensure a comfortable and relaxing stay for our guests. We understand that a good nights sleep is crucial for a pleasant stay, which is why we provide high-quality bedding, clean sheets, fluffy pillows, and warm blankets in all our rooms. Additionally, our rooms are equipped with a range of modern facilities to cater to your needs, such as air conditioning/heating, TV, Wi-Fi, and a private bathroom with toiletries. Our goal is to provide a memorable and enjoyable experience for all our guests, and we hope that our room facilities will exceed your expectations.</string>
    <string name="facilities_details">Facilities Details</string>

    <string name="about_us_version">1.0.0</string>
    <string name="about_us_company">Milas</string>
    <string name="about_us_email">Milas@gmail.com</string>
    <string name="about_us_website">www.Milas.com</string>
    <string name="about_us_contact">+639515408978</string>

    <string name="about_us_app_info">Our Transire app is designed to make booking your next vacation or business trip a breeze. With easy-to-use features, you can search for hotels by location, amenities, and price range. Our app provides you with detailed hotel descriptions, photos, and reviews from previous guests, helping you make an informed decision. Plus, you can access exclusive deals and discounts and manage your bookings directly through the app. So why wait? Book our hotel app today and start planning your next amazing trip!</string>

    <string name="contact_us_select">Select Contact Subject</string>
    <string-array name="contact_us_dropdown">
        <item>Select Contact Subject</item>
        <item>Others</item>
        <item>Food</item>
        <item>Services</item>
        <item>Cleaning</item>
    </string-array>


    <string name="sample_room_name">Exclusive the luxury hotel rooms</string>
    <string name="sample_room_about">The room was small and cozy, with a single window overlooking the garden. The walls were painted in a soothing shade of blue, and a comfortable armchair was placed in the corner. A bookshelf filled with books and a small desk completed the space, making it perfect for reading and relaxation.</string>

    <string name="room_amenities">Room Amenities</string>
    <string name="room_rules">Room Rules</string>

    <string-array name="room_amenities_points">
        <item>Single Double Bed</item>
        <item>Linens and pillows</item>
        <item>Bath towels, hand towels, and washcloths</item>
        <item>Bathroom with a toilet, sink, and shower</item>
        <item>Soap, shampoo, conditioner</item>
        <item>Hairdryer </item>
        <item>Television with satellite channels</item>
        <item>Internet access</item>
        <item>Telephone </item>
        <item>Desk and chair </item>
        <item>Mini fridge</item>
        <item>Coffee/tea maker</item>
        <item>Iron and ironing board</item>
        <item>Safe Lock</item>
        <item>Air conditioning/heating</item>
    </string-array>

    <string name="room_rules_cop">Room Rules</string>
    <string name="room_rules_ceb">Room Rules</string>
    <string name="room_rules_addInfo">Room Rules</string>


    <string-array name="adult_child_booking_dropdown">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string-array name="room_names">
        <item>Exclusive Transient House rooms</item>
        <item>Exclusive Transient House Living room</item>
        <item>Deluxe Transient Master Bedroom</item>
        <item>Aesthetic Bunkbed Futuristic Transient Rooms</item>
    </string-array>


    <string-array name="room_details_intro">
        <item>Exclusive transient house rooms are private accommodations that are available for short-term rent, usually for vacation or tourism purposes. These rooms are typically found in popular tourist destinations and offer a more personalized and intimate experience than traditional hotel accommodations.</item>
        <item>The exclusive transient living room is a luxurious and comfortable living space designed to provide an exceptional experience for guests. It features a spacious king-size bed, a private bathroom, a sitting area, and a kitchenette equipped with everything you need for a comfortable stay. The room is air-conditioned, with complimentary high-speed Wi-Fi and breakfast provided every morning. The living room is perfect for individuals or couples looking for an upscale and comfortable living space during their travels. Our customer service team is available 24/7 to assist with any inquiries or requests to ensure a hassle-free and memorable stay.</item>
        <item>The deluxe transient master bedroom is a luxurious and spacious bedroom designed to provide a comfortable and upscale experience for guests. It features a large and comfortable king-size bed, a private bathroom with modern amenities, and a sitting area for relaxation. The room is air-conditioned, with complimentary high-speed Wi-Fi, and daily housekeeping services are provided to ensure a clean and comfortable stay. The bedroom is perfect for individuals or couples looking for a luxurious and comfortable living space during their travels. Our customer service team is available 24/7 to assist with any inquiries or requests to ensure a hassle-free and memorable stay.</item>
        <item>The Aesthetic Bunkbed Futuristic Transient Rooms are modern and trendy living spaces designed for comfort and style. These rooms feature a futuristic aesthetic with sleek and innovative designs, including unique and stylish bunkbeds. Each room includes a private bathroom, complimentary high-speed Wi-Fi, and air conditioning for a comfortable stay. The bunkbeds provide a fun and playful element to the room while still being functional and comfortable. These transient rooms are perfect for solo travelers, friends, or families looking for a modern and stylish living space during their travels. Our customer service team is available 24/7 to assist with any inquiries or requests to ensure a memorable and enjoyable stay.</item>
    </string-array>


    <string-array name="gallery_card_names">
        <item>Milas Baguio Transient House</item>
        <item>Exclusive Transient House rooms</item>
        <item>Exclusive Transient House Living room</item>
        <item>Aesthetic Bunkbed Futuristic Transient Rooms </item>
        <item>Luxurious Transient Bunkbed for 2-5 packs</item>
        <item>Omni premium transient Rooms</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>