<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/card_room"
            android:title="@string/menu_rooms" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/card_location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/card_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_facilities"
            android:icon="@drawable/card_facilities"
            android:title="@string/menu_facilities" />
        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/ic_menu_bookmark"
            android:title="@string/menu_my_booking" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/about_us_user"
            android:title="@string/menu_profile" />




    </group>
</menu>