<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<!-- CAROSUL IMAGES -->
    <View
        android:id="@+id/iv_carousel"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:scaleType="fitCenter"
        android:background="@drawable/carousel2" />
<!-- HOTEL INFO-->


    <androidx.cardview.widget.CardView
        android:layout_marginTop="-40dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home_card_place_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_card_palace_name" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:weightSum="12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_home_card_location"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/tv_home_card_location"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/home_card_location" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="12"
                android:layout_marginVertical="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_home_card_email"
                    android:src="@drawable/email" />

                <TextView
                    android:id="@+id/tv_home_card_email"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/home_card_email" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_home_card_phone"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/tv_home_card_phone"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:text="@string/home_card_phone" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


<!--HOTEL CARD CONTENTS-->
    <LinearLayout
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_weight="4"
                app:cardUseCompatPadding="true"
                android:layout_margin="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/card_rooms"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/ll_btn_rooms"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_card_rooms"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/card_room" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_card_rooms"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_rooms" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="4"
                app:cardUseCompatPadding="true"
                android:layout_margin="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/card_location"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/ll_btn_location"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_card_location"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/card_location" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_card_location"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_location" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="4"
                app:cardUseCompatPadding="true"
                android:layout_margin="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/card_facilities"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/ll_btn_facilities"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_card_facilities"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/card_facilities" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_card_facilities"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_facilities" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_weight="4"
                app:cardUseCompatPadding="true"
                android:layout_margin="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/card_gallery"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/ll_btn_gallery"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_card_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/card_gallery" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_card_gallery"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_gallery" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="4"
                app:cardUseCompatPadding="true"
                android:layout_margin="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/card_contact_us"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/ll_btn_contact_us"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_card_contactus"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/card_contact_us" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_card_contactus"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_contact_us" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="4"
                app:cardUseCompatPadding="true"
                android:layout_margin="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/card_about_us"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/ll_btn_about_us"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_card_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/card_about_us" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:id="@+id/tv_card_about_us"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_about_us" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>