<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.contactus.ContactUsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_home_card_place_name"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/text_grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_card_palace_name" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/iv_home_card_location"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/tv_home_card_location"
                        android:textColor="@color/text_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="11"
                        android:text="@string/home_card_location" />
                </LinearLayout>

                <LinearLayout
                    android:weightSum="12"
                    android:layout_marginVertical="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/iv_home_card_email"
                        android:src="@drawable/email" />

                    <TextView
                        android:id="@+id/tv_home_card_email"
                        android:textColor="@color/text_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="11"
                        android:text="@string/home_card_email" />
                </LinearLayout>

                <LinearLayout
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/iv_home_card_phone"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/tv_home_card_phone"
                        android:textColor="@color/text_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="11"
                        android:text="@string/home_card_phone" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Phone No."
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/contact_us_select"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                >

                <AutoCompleteTextView
                    android:id="@+id/act_contact_us_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none">

                </AutoCompleteTextView>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Your Message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:gravity="top"
                    android:overScrollMode="always"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideInset"
                    android:scrollHorizontally="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit_contact_us"
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Submit" />


        </LinearLayout>

</ScrollView>